# OSI-MOSEK

./: .gitignore  Makefile.am  Makefile.in  README.md  compile.sh  configure  configure.ac  osimosek-uninstalled.pc.in  osimosek.pc.in
examples/: Makefile.in  cont_solver.cpp
examples/solver/: mosek_cont_solver.cpp
src/: Makefile.am  Makefile.in  OsiMosekSolverInterface.cpp  OsiMosekSolverInterface.hpp  config.h.in
